removed boarder content

--- a/public/index.html
+++ b/public/index.html
@@ -270,8 +270,7 @@ url('/img/headers/bubbles-wide.jpg');
     </h1>
 
     
-    <p class="hero-lead">The highly flexible website framework for Hugo with an extensible plugin mechanism. Create a beautifully simple site in under 10 minutes 🚀
-<br>
+    <p class="hero-lead"><br>
 <small><a id="academic-release" href="https://sourcethemes.com/academic/tags/updates">Latest release</a></small>
 <br><br>
 <iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=gcushen&amp;repo=hugo-academic&amp;type=star&amp;count=true&amp;size=large" scrolling="0" width="160px" height="30px" frameborder="0"></iframe>
