changed my details

--- a/public/404.html
+++ b/public/404.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="Professor of Artificial Intelligence">
+  <meta name="description" content="PhD Candidate in Statistics">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -74,7 +74,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Academic">
-  <meta property="og:description" content="Professor of Artificial Intelligence">
+  <meta property="og:description" content="PhD Candidate in Statistics">
   <meta property="og:locale" content="en-us">
   
   
