removed the tile of the site

--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -49,8 +49,8 @@
   
 
   
-  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="/publication/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="">
+  <link rel="feed" href="/publication/index.xml" type="application/rss+xml" title="">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -64,9 +64,9 @@
   <meta property="twitter:site" content="@GeorgeCushen">
   <meta property="twitter:creator" content="@GeorgeCushen">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content="">
   <meta property="og:url" content="/publication/">
-  <meta property="og:title" content="Publications | Academic">
+  <meta property="og:title" content="Publications | ">
   <meta property="og:description" content="PhD Candidate in Statistics">
   <meta property="og:locale" content="en-us">
   
@@ -75,7 +75,7 @@
 
   
 
-  <title>Publications | Academic</title>
+  <title>Publications | </title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -94,7 +94,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/"></a>
     </div>
 
     
