--- a/public/project/example-external-project/index.html
+++ b/public/project/example-external-project/index.html
@@ -60,8 +60,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -75,9 +75,9 @@
   <meta property="twitter:site" content="@GeorgeCushen">
   <meta property="twitter:creator" content="@GeorgeCushen">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content="">
   <meta property="og:url" content="/project/example-external-project/">
-  <meta property="og:title" content="External Project | Academic">
+  <meta property="og:title" content="External Project | ">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>External Project | Academic</title>
+  <title>External Project | </title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -107,7 +107,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/"></a>
     </div>
 
     
