--- a/public/publication_types/1/index.html
+++ b/public/publication_types/1/index.html
@@ -58,8 +58,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -73,9 +73,9 @@
   <meta property="twitter:site" content="@GeorgeCushen">
   <meta property="twitter:creator" content="@GeorgeCushen">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content="">
   <meta property="og:url" content="/publication_types/1/">
-  <meta property="og:title" content="1 | Academic">
+  <meta property="og:title" content="1 | ">
   <meta property="og:description" content="PhD Candidate in Statistics">
   <meta property="og:locale" content="en-us">
   
@@ -84,7 +84,7 @@
 
   
 
-  <title>1 | Academic</title>
+  <title>1 | </title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -103,7 +103,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/"></a>
     </div>
 
     
