--- a/public/index.html
+++ b/public/index.html
@@ -387,7 +387,7 @@ url('/img/headers/bubbles-wide.jpg');
           <li>
             <i class="fa-li fa fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD in Statistics(Reading)</p>
+              <p class="course">PhD in Statistics(reading)</p>
               <p class="institution">Monash University</p>
             </div>
           </li>
