--- a/public/index.html
+++ b/public/index.html
@@ -353,11 +353,9 @@ url('/img/headers/bubbles-wide.jpg');
 
     
 
-<h1 id="about-me">About Me</h1>
+<h1 id="about-me">About me</h1>
 
-<p>Lena Smith is a professor of artificial intelligence at the Stanford AI Lab. Her research interests include distributed robotics, mobile computing and programmable matter. She leads the Robotic Neurobiology group, which develops self-reconfiguring robots, systems of self-organizing robots, and mobile sensor networks.</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.</p>
+<p>I am a PhD candidate in Statistics at</p>
 
 
     <div class="row">
