changed the home page

--- a/public/index.html
+++ b/public/index.html
@@ -266,7 +266,7 @@ url('/img/headers/bubbles-wide.jpg');
   <div class="container">
 
     <h1 class="hero-title" itemprop="headline">
-      Hi
+      Welcome
     </h1>
 
     
