updated the website

--- a/public/index.html
+++ b/public/index.html
@@ -1277,18 +1277,13 @@ url('/img/headers/bubbles-wide.jpg');
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p>This is an example of using the <em>custom</em> widget to create your own homepage section.</p>
+    <p>I am Lecturer in the Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura-Sri Lanka (currently on study leave).</p>
 
-<p>I am a teaching instructor for the following courses at University X:</p>
+<p>I am a teaching associate for the following courses at Monash University Australia:</p>
 
 <ul>
-<li>CS101: An intro to computer science</li>
-<li>CS102: An intro to computer science</li>
-<li>CS103: An intro to computer science</li>
-<li>CS104: An intro to computer science</li>
-<li>CS105: An intro to computer science</li>
-<li>CS106: An intro to computer science</li>
-<li>CS107: An intro to computer science</li>
+<li>ETC1000: An intro to computer science</li>
+<li>ETC2420: An intro to computer science</li>
 </ul>
 
   </div>
