add email, twitter, and github

--- a/public/project/example-external-project/index.html
+++ b/public/project/example-external-project/index.html
@@ -72,8 +72,8 @@
 
   <meta property="twitter:card" content="summary_large_image">
   
-  <meta property="twitter:site" content="@GeorgeCushen">
-  <meta property="twitter:creator" content="@GeorgeCushen">
+  <meta property="twitter:site" content="@thiyangt">
+  <meta property="twitter:creator" content="@thiyangt">
   
   <meta property="og:site_name" content="">
   <meta property="og:url" content="/project/example-external-project/">
