--- a/public/404.html
+++ b/public/404.html
@@ -244,6 +244,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/widgets/">Customizing the homepage with widgets</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/managing-content/">Managing content</a></li>
   </ul>
   
@@ -253,10 +257,6 @@
   
   <ul>
     <li><a href="/post/faq/">Frequently Asked Questions (FAQ)</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/post/2015-07-23-r-rmarkdown/">Hello R Markdown</a></li>
   </ul>
   
   <ul>
