changed the title recent and upcoming talks to talks

--- a/public/index.html
+++ b/public/index.html
@@ -430,7 +430,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 <div class="row">
   <div class="col-xs-12 col-md-4 section-heading">
-    <h1>Recent &amp; Upcoming Talks</h1>
+    <h1>Talks</h1>
     
     
   </div>
