add index file to new tabs

--- a/public/404.html
+++ b/public/404.html
@@ -294,7 +294,7 @@
   </ul>
   
   <ul>
-    <li><a href="/post/faq/">Frequently Asked Questions (FAQ)</a></li>
+    <li><a href="/post/faq/">Getting Started with Blogdown</a></li>
   </ul>
   
   <ul>
