--- a/public/index.html
+++ b/public/index.html
@@ -817,7 +817,7 @@ url('/img/headers/bubbles-wide.jpg');
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="/post/faq/" itemprop="url">Frequently Asked Questions (FAQ)</a>
+    <a href="/post/faq/" itemprop="url">Getting Started with Blogdown</a>
   </h3>
   
 
