--- a/public/index.html
+++ b/public/index.html
@@ -382,9 +382,15 @@ url('/img/headers/bubbles-wide.jpg');
 
     
 
-<h1 id="biography">Biography</h1>
+<h1 id="about-me">About me</h1>
 
-<p>I am a PhD student in Statistics at Monash University, Australia. My main research interest is in time series analysis and machine learning for big data.</p>
+<p>I am a PhD student in Statistics at Monash University, Australia. My recent research has cetered around the problem of forecasting large collections of time series. My dissertation work focuses specifically on developing computationally efficient forecasting methods for large-scale real-time applications.</p>
+
+<p>I am also interested in statistical programming with R. I have written several  packages in R.</p>
+
+<p>Prior to joining Monash, I received a B.Sc. special degree in Statistics from the University of Sri Jayewardenepura, Sri Lanka. I was ranked top in my batch and was awarded with <a href="http://science.sjp.ac.lk/scholarships/" target="_blank">Professor R A Dayananda Gold Medal for statistics</a>. My MSc. theis titled, &ldquo;Mathematical modeling of dengue dynamics and climate variability in Sri Lanka&rdquo; won Bronze Medal at the Best Postgraduate Research Project Award Competition organized by the Institute of Applied Statistics, Sri Lanka.</p>
+
+<p>My main research interest is in time series analysis and machine learning for big data.</p>
 
 
     <div class="row">
