--- a/public/index.html
+++ b/public/index.html
@@ -388,7 +388,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 <p>I am also interested in statistical programming with R. I have written several  packages in R.</p>
 
-<p>Prior to joining Monash, I received a B.Sc. special degree in Statistics from the University of Sri Jayewardenepura, Sri Lanka. I was ranked top in my batch and was awarded with <a href="http://science.sjp.ac.lk/scholarships/" target="_blank">Professor R A Dayananda Gold Medal for statistics</a>. My MSc. theis titled, &ldquo;Mathematical modeling of dengue dynamics and climate variability in Sri Lanka&rdquo; won Bronze Medal at the Best Postgraduate Research Project Award Competition organized by the Institute of Applied Statistics, Sri Lanka.</p>
+<p>Prior to joining Monash, I received a B.Sc. special degree in Statistics from the University of Sri Jayewardenepura, Sri Lanka. I was ranked first in my class and was awarded with <a href="http://science.sjp.ac.lk/scholarships/" target="_blank">Professor R A Dayananda Gold Medal for statistics</a>. My MSc. theis titled, &ldquo;Mathematical modeling of dengue dynamics and climate variability in Sri Lanka&rdquo; won Bronze Medal at the Best Postgraduate Research Project Award Competition organized by the Institute of Applied Statistics, Sri Lanka and a Special recognition award from <a href="https://www.mrt.ac.lk/web/" target="_blank">University of Moratuwa, Sri Lanka</a> for winning the Bronze Medal at the Best Postgraduate Research Project Award Competition.</p>
 
 <p>My main research interest is in time series analysis and machine learning for big data.</p>
 
