--- a/public/404.html
+++ b/public/404.html
@@ -284,7 +284,7 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="/talk/example-talk/">Example Talk</a></li>
+    <li><a href="/talk/jsm18-talk/">A Classification Framework for Forecast-Model Selection</a></li>
   </ul>
   
   
