add jsm pdf url

--- a/public/index.html
+++ b/public/index.html
@@ -779,7 +779,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/ThiTal/blob/master/static/talks/jsm18.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="/static/talks/jsm18.pdf">
   PDF
 </a>
 
