--- a/public/talk/jsm18-talk/index.html
+++ b/public/talk/jsm18-talk/index.html
@@ -369,7 +369,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://github.com/thiyangt/ThiTal/blob/master/static/talks/jsm18.pdf">
+<a class="btn btn-primary btn-outline" href="/static/talks/jsm18.pdf">
   PDF
 </a>
 
