--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -267,7 +267,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/thiyangt/ThiTal/blob/master/static/talks/jsm18.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="/static/talks/jsm18.pdf">
   PDF
 </a>
 
