--- a/public/index.html
+++ b/public/index.html
@@ -390,6 +390,8 @@ url('/img/headers/bubbles-wide.jpg');
 
 <p>Prior to joining Monash, I received a B.Sc. special degree in Statistics from the University of Sri Jayewardenepura, Sri Lanka. I was ranked first in my class and was awarded with <a href="http://science.sjp.ac.lk/scholarships/" target="_blank">Professor R A Dayananda Gold Medal for statistics</a>. My MSc. theis titled, &ldquo;Mathematical modeling of dengue dynamics and climate variability in Sri Lanka&rdquo; won Bronze Medal at the Best Postgraduate Research Project Award Competition organized by the Institute of Applied Statistics, Sri Lanka and a Special recognition award from <a href="https://www.mrt.ac.lk/web/" target="_blank">University of Moratuwa, Sri Lanka</a> for winning the Bronze Medal at the Best Postgraduate Research Project Award Competition.</p>
 
+<p>This site is built with R markdown and Hugo and deployed with Netlify.</p>
+
 
     <div class="row">
 
