working on software section

--- a/public/software/index.html
+++ b/public/software/index.html
@@ -68,7 +68,7 @@
   
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="/software/">
-  <meta property="og:title" content="publications | Academic">
+  <meta property="og:title" content="software | Academic">
   <meta property="og:description" content="PhD Candidate in Statistics">
   <meta property="og:locale" content="en-us">
   
@@ -77,7 +77,7 @@
 
   
 
-  <title>publications | Academic</title>
+  <title>software | Academic</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -235,7 +235,7 @@
 
 <div class="universal-wrapper">
 
-  <h1>publications</h1>
+  <h1>software</h1>
 
   
 
