working on software section

--- a/public/index.html
+++ b/public/index.html
@@ -425,7 +425,7 @@ url('/img/headers/bubbles-wide.jpg');
   
   
   
-  <section id="data_science" class="home-section">
+  <section id="data_import" class="home-section">
     <div class="container">
       
 
