--- a/public/index.html
+++ b/public/index.html
@@ -433,7 +433,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 <div class="row">
   <div class="col-xs-12 col-md-4 section-heading">
-    <h1>Selected Publications</h1>
+    <h1>Data Import</h1>
     
   </div>
   <div class="col-xs-12 col-md-8">
