--- a/public/research/index.html
+++ b/public/research/index.html
@@ -51,8 +51,8 @@
   
 
   
-  <link rel="alternate" href="/research/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="/research/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="/research/index.xml" type="application/rss+xml" title="">
+  <link rel="feed" href="/research/index.xml" type="application/rss+xml" title="">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -66,9 +66,9 @@
   <meta property="twitter:site" content="@thiyangt">
   <meta property="twitter:creator" content="@thiyangt">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content="">
   <meta property="og:url" content="/research/">
-  <meta property="og:title" content="Research | Academic">
+  <meta property="og:title" content="Research | ">
   <meta property="og:description" content="PhD Candidate in Statistics">
   <meta property="og:locale" content="en-us">
   
@@ -77,7 +77,7 @@
 
   
 
-  <title>Research | Academic</title>
+  <title>Research | </title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -96,7 +96,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/"></a>
     </div>
 
     
