change the copy right name

--- a/public/index.html
+++ b/public/index.html
@@ -791,7 +791,7 @@ url('/img/headers/bubbles-wide.jpg');
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2017 Your Name &middot; 
+      &copy; 2018 Thiyanga S Talagala &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
