--- a/public/software/clothing-search/index.html
+++ b/public/software/clothing-search/index.html
@@ -373,7 +373,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2017 Your Name &middot; 
+      &copy; 2018 Thiyanga S Talagala &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
