--- a/public/index.html
+++ b/public/index.html
@@ -686,18 +686,10 @@ url('/img/headers/bubbles-wide.jpg');
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p>This is an example of using the <em>custom</em> widget to create your own homepage section.</p>
+    <ul>
+<li><p>Teaching Associate, Monash University, Australia</p></li>
 
-<p>I am a teaching instructor for the following courses at University X:</p>
-
-<ul>
-<li>CS101: An intro to computer science</li>
-<li>CS102: An intro to computer science</li>
-<li>CS103: An intro to computer science</li>
-<li>CS104: An intro to computer science</li>
-<li>CS105: An intro to computer science</li>
-<li>CS106: An intro to computer science</li>
-<li>CS107: An intro to computer science</li>
+<li><p>Lecturer(Probationary),Department of Statistics, Faculty of Applied Sciences, Univesity of Sri Jayewardenepura, Sri Lanka (currently on study leave)</p></li>
 </ul>
 
   </div>
