--- a/public/index.html
+++ b/public/index.html
@@ -689,7 +689,7 @@ url('/img/headers/bubbles-wide.jpg');
     <ul>
 <li><p>Teaching Associate, Monash University, Australia</p></li>
 
-<li><p>Lecturer(Probationary),Department of Statistics, Faculty of Applied Sciences, Univesity of Sri Jayewardenepura, Sri Lanka (currently on study leave)</p></li>
+<li><p>Lecturer (Probationary), <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, Univesity of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p></li>
 </ul>
 
   </div>
