link the jsm-pdf

--- a/public/index.html
+++ b/public/index.html
@@ -559,6 +559,10 @@ url('/img/headers/bubbles-wide.jpg');
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="/talks/jsm18.pdf">
+  Slides
+</a>
+
 
 
 
