add isf 2018 pdf

--- a/public/talk/jsm18-talk/index.html
+++ b/public/talk/jsm18-talk/index.html
@@ -413,7 +413,11 @@
     <div class="space-below"></div>
 
     <div class="article-style">
-      <p>Associated R package: <a href="https://github.com/thiyangt/seer" target="_blank">seer</a></p>
+      <ul>
+<li><p>The background pictures are of free copyright from <a href="https://pixabay.com/en/photos/presentation/" target="_blank">https://pixabay.com/en/photos/presentation/</a>.</p></li>
+
+<li><p>Associated R package: <a href="https://github.com/thiyangt/seer" target="_blank">seer</a></p></li>
+</ul>
 
     </div>
 
