tweaks to jsm-2018.md

--- a/public/talk/jsm18-talk/index.html
+++ b/public/talk/jsm18-talk/index.html
@@ -413,11 +413,9 @@
     <div class="space-below"></div>
 
     <div class="article-style">
-      <ul>
-<li><p>The background pictures are of free copyright from <a href="https://pixabay.com/en/photos/presentation/" target="_blank">https://pixabay.com/en/photos/presentation/</a>.</p></li>
+      <p>The background pictures are of free copyright from <a href="https://pixabay.com/en/photos/presentation/" target="_blank">https://pixabay.com/en/photos/presentation/</a>.</p>
 
-<li><p>Associated R package: <a href="https://github.com/thiyangt/seer" target="_blank">seer</a></p></li>
-</ul>
+<p>Associated R package: <a href="https://github.com/thiyangt/seer" target="_blank">seer</a></p>
 
     </div>
 
