link isf 2018 slides

--- a/public/404.html
+++ b/public/404.html
@@ -269,6 +269,10 @@
   <h2>Talks</h2>
   
   <ul>
+    <li><a href="/talk/isf18-talk/">A Classification Framework for Forecast-Model Selection</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/talk/jsm18-talk/">A Classification Framework for Forecast-Model Selection</a></li>
   </ul>
   
