completed isf and jsm work

--- a/public/talk/jsm18-talk/index.html
+++ b/public/talk/jsm18-talk/index.html
@@ -356,7 +356,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="http://ww2.amstat.org/meetings/jsm/2018/" target="_blank" rel="noopener">
-            Joint Statistical Meetings(JSM) 2018
+            Joint Statistical Meetings(JSM) 2018, Vancouver, BC, Canada
             </a>
           </div>
         </div>
