--- a/public/404.html
+++ b/public/404.html
@@ -269,11 +269,11 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="/talk/isf18-talk/">A Classification Framework for Forecast-Model Selection</a></li>
+    <li><a href="/talk/jsm18-talk/">A Classification Framework for Forecast-Model Selection</a></li>
   </ul>
   
   <ul>
-    <li><a href="/talk/jsm18-talk/">A Classification Framework for Forecast-Model Selection</a></li>
+    <li><a href="/talk/isf18-talk/">Meta-learning how to forecast time series</a></li>
   </ul>
   
   
