--- a/public/talk/isf18-talk/index.html
+++ b/public/talk/isf18-talk/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="">
   <meta property="og:url" content="/talk/isf18-talk/">
-  <meta property="og:title" content="A Classification Framework for Forecast-Model Selection | ">
+  <meta property="og:title" content="Meta-learning how to forecast time series | ">
   <meta property="og:description" content=""><meta property="og:image" content="/img/headers/bubbles-wide.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>A Classification Framework for Forecast-Model Selection | </title>
+  <title>Meta-learning how to forecast time series | </title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -272,7 +272,7 @@
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">A Classification Framework for Forecast-Model Selection</h1>
+      <h1 itemprop="name">Meta-learning how to forecast time series</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -282,7 +282,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20Classification%20Framework%20for%20Forecast-Model%20Selection&amp;url=%2ftalk%2fisf18-talk%2f"
+         href="https://twitter.com/intent/tweet?text=Meta-learning%20how%20to%20forecast%20time%20series&amp;url=%2ftalk%2fisf18-talk%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -296,21 +296,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fisf18-talk%2f&amp;title=A%20Classification%20Framework%20for%20Forecast-Model%20Selection"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fisf18-talk%2f&amp;title=Meta-learning%20how%20to%20forecast%20time%20series"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fisf18-talk%2f&amp;title=A%20Classification%20Framework%20for%20Forecast-Model%20Selection"
+         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fisf18-talk%2f&amp;title=Meta-learning%20how%20to%20forecast%20time%20series"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20Classification%20Framework%20for%20Forecast-Model%20Selection&amp;body=%2ftalk%2fisf18-talk%2f">
+         href="mailto:?subject=Meta-learning%20how%20to%20forecast%20time%20series&amp;body=%2ftalk%2fisf18-talk%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -355,7 +355,7 @@
           <div class="col-xs-12 col-sm-3 pub-row-heading">Event</div>
           <div class="col-xs-12 col-sm-9">
             <a href="https://forecasters.org/events/symposium-on-forecasting/" target="_blank" rel="noopener">
-            38th International Symposium on Forecasting
+            38th International Symposium on Forecasting, Boulder, Colorado, USA
             </a>
           </div>
         </div>
