change the jsm title to lower case

--- a/public/talk/jsm18-talk/index.html
+++ b/public/talk/jsm18-talk/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="">
   <meta property="og:url" content="/talk/jsm18-talk/">
-  <meta property="og:title" content="A Classification Framework for Forecast-Model Selection | ">
+  <meta property="og:title" content="A classification framework for forecast-model selection | ">
   <meta property="og:description" content="https://ww2.amstat.org/meetings/jsm/2018/onlineprogram/AbstractDetails.cfm?abstractid=330245"><meta property="og:image" content="/img/headers/bubbles-wide.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>A Classification Framework for Forecast-Model Selection | </title>
+  <title>A classification framework for forecast-model selection | </title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -272,7 +272,7 @@
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">A Classification Framework for Forecast-Model Selection</h1>
+      <h1 itemprop="name">A classification framework for forecast-model selection</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -282,7 +282,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20Classification%20Framework%20for%20Forecast-Model%20Selection&amp;url=%2ftalk%2fjsm18-talk%2f"
+         href="https://twitter.com/intent/tweet?text=A%20classification%20framework%20for%20forecast-model%20selection&amp;url=%2ftalk%2fjsm18-talk%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -296,21 +296,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fjsm18-talk%2f&amp;title=A%20Classification%20Framework%20for%20Forecast-Model%20Selection"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fjsm18-talk%2f&amp;title=A%20classification%20framework%20for%20forecast-model%20selection"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fjsm18-talk%2f&amp;title=A%20Classification%20Framework%20for%20Forecast-Model%20Selection"
+         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fjsm18-talk%2f&amp;title=A%20classification%20framework%20for%20forecast-model%20selection"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20Classification%20Framework%20for%20Forecast-Model%20Selection&amp;body=%2ftalk%2fjsm18-talk%2f">
+         href="mailto:?subject=A%20classification%20framework%20for%20forecast-model%20selection&amp;body=%2ftalk%2fjsm18-talk%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
