--- a/public/404.html
+++ b/public/404.html
@@ -269,7 +269,7 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="/talk/jsm18-talk/">A Classification Framework for Forecast-Model Selection</a></li>
+    <li><a href="/talk/jsm18-talk/">A classification framework for forecast-model selection</a></li>
   </ul>
   
   <ul>
