--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -268,7 +268,7 @@
             
               <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="/talk/jsm18-talk/">A Classification Framework for Forecast-Model Selection</a></span>
+  <span itemprop="name"><a href="/talk/jsm18-talk/">A classification framework for forecast-model selection</a></span>
   <div itemprop="startDate">
     
     Aug 1, 2018
