--- a/public/talk/isf18-talk/index.html
+++ b/public/talk/isf18-talk/index.html
@@ -60,8 +60,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="THIYANGA TALAGALA">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="THIYANGA TALAGALA">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -75,9 +75,9 @@
   <meta property="twitter:site" content="@thiyangt">
   <meta property="twitter:creator" content="@thiyangt">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/talk/isf18-talk/">
-  <meta property="og:title" content="Meta-learning how to forecast time series | ">
+  <meta property="og:title" content="Meta-learning how to forecast time series | THIYANGA TALAGALA">
   <meta property="og:description" content=""><meta property="og:image" content="/img/headers/bubbles-wide.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>Meta-learning how to forecast time series | </title>
+  <title>Meta-learning how to forecast time series | THIYANGA TALAGALA</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -107,7 +107,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">THIYANGA TALAGALA</a>
     </div>
 
     
