--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -58,8 +58,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="THIYANGA TALAGALA">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="THIYANGA TALAGALA">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -73,9 +73,9 @@
   <meta property="twitter:site" content="@thiyangt">
   <meta property="twitter:creator" content="@thiyangt">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/publication_types/2/">
-  <meta property="og:title" content="2 | ">
+  <meta property="og:title" content="2 | THIYANGA TALAGALA">
   <meta property="og:description" content="PhD Candidate in Statistics">
   <meta property="og:locale" content="en-us">
   
@@ -84,7 +84,7 @@
 
   
 
-  <title>2 | </title>
+  <title>2 | THIYANGA TALAGALA</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -103,7 +103,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">THIYANGA TALAGALA</a>
     </div>
 
     
