--- a/public/software/index.html
+++ b/public/software/index.html
@@ -51,8 +51,8 @@
   
 
   
-  <link rel="alternate" href="/software/index.xml" type="application/rss+xml" title="">
-  <link rel="feed" href="/software/index.xml" type="application/rss+xml" title="">
+  <link rel="alternate" href="/software/index.xml" type="application/rss+xml" title="THIYANGA TALAGALA">
+  <link rel="feed" href="/software/index.xml" type="application/rss+xml" title="THIYANGA TALAGALA">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -66,9 +66,9 @@
   <meta property="twitter:site" content="@thiyangt">
   <meta property="twitter:creator" content="@thiyangt">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/software/">
-  <meta property="og:title" content="software | ">
+  <meta property="og:title" content="software | THIYANGA TALAGALA">
   <meta property="og:description" content="PhD Candidate in Statistics">
   <meta property="og:locale" content="en-us">
   
@@ -77,7 +77,7 @@
 
   
 
-  <title>software | </title>
+  <title>software | THIYANGA TALAGALA</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -96,7 +96,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">THIYANGA TALAGALA</a>
     </div>
 
     
