add japan slides

--- a/public/404.html
+++ b/public/404.html
@@ -273,7 +273,7 @@
   </ul>
   
   <ul>
-    <li><a href="/talk/japan18-talk/">Analysing Large Collections of Time Series</a></li>
+    <li><a href="/talk/japan18-talk/">Analysing large collections of time series</a></li>
   </ul>
   
   <ul>
