--- a/public/talk/japan18-talk/index.html
+++ b/public/talk/japan18-talk/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="THIYANGA TALAGALA">
   <meta property="og:url" content="/talk/japan18-talk/">
-  <meta property="og:title" content="Analysing Large Collections of Time Series | THIYANGA TALAGALA">
+  <meta property="og:title" content="Analysing large collections of time series | THIYANGA TALAGALA">
   <meta property="og:description" content=""><meta property="og:image" content="/img/headers/bubbles-wide.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>Analysing Large Collections of Time Series | THIYANGA TALAGALA</title>
+  <title>Analysing large collections of time series | THIYANGA TALAGALA</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -272,7 +272,7 @@
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">Analysing Large Collections of Time Series</h1>
+      <h1 itemprop="name">Analysing large collections of time series</h1>
       <span class="pub-authors" itemprop="author">
         
       </span>
@@ -282,7 +282,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Analysing%20Large%20Collections%20of%20Time%20Series&amp;url=%2ftalk%2fjapan18-talk%2f"
+         href="https://twitter.com/intent/tweet?text=Analysing%20large%20collections%20of%20time%20series&amp;url=%2ftalk%2fjapan18-talk%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -296,21 +296,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fjapan18-talk%2f&amp;title=Analysing%20Large%20Collections%20of%20Time%20Series"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2ftalk%2fjapan18-talk%2f&amp;title=Analysing%20large%20collections%20of%20time%20series"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fjapan18-talk%2f&amp;title=Analysing%20Large%20Collections%20of%20Time%20Series"
+         href="http://service.weibo.com/share/share.php?url=%2ftalk%2fjapan18-talk%2f&amp;title=Analysing%20large%20collections%20of%20time%20series"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Analysing%20Large%20Collections%20of%20Time%20Series&amp;body=%2ftalk%2fjapan18-talk%2f">
+         href="mailto:?subject=Analysing%20large%20collections%20of%20time%20series&amp;body=%2ftalk%2fjapan18-talk%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
