--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -380,7 +380,7 @@
             
               <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="/talk/japan18-talk/">Analysing Large Collections of Time Series</a></span>
+  <span itemprop="name"><a href="/talk/japan18-talk/">Analysing large collections of time series</a></span>
   <div itemprop="startDate">
     
     Feb 12, 2018
