--- a/public/404.html
+++ b/public/404.html
@@ -269,11 +269,11 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="/talk/jsm18-talk/">A classification framework for forecast-model selection</a></li>
+    <li><a href="/talk/japan18-talk/">Analysing large collections of time series</a></li>
   </ul>
   
   <ul>
-    <li><a href="/talk/japan18-talk/">Analysing large collections of time series</a></li>
+    <li><a href="/talk/ssa17-talk/">Feature-based model selection for time series forecasting</a></li>
   </ul>
   
   <ul>
