--- a/public/index.html
+++ b/public/index.html
@@ -380,6 +380,8 @@ url('/img/headers/bubbles-wide.jpg');
 
 <p>Prior to joining Monash, I received a B.Sc. special degree in Statistics from the <a href="https://www.sjp.ac.lk/" target="_blank">University of Sri Jayewardenepura, Sri Lanka</a>. I was ranked first in my class and was awarded with <a href="http://science.sjp.ac.lk/scholarships/" target="_blank">Professor R A Dayananda Gold Medal for Statistics</a>. My MSc. thesis titled, &ldquo;Mathematical modeling of dengue dynamics and climate variability in Sri Lanka&rdquo; won Bronze Medal at the Best Postgraduate Research Project Award Competition organized by the Institute of Applied Statistics, Sri Lanka and a special recognition award from <a href="https://www.mrt.ac.lk/web/" target="_blank">University of Moratuwa, Sri Lanka</a> for winning the Bronze Medal at the Best Postgraduate Research Project Award Competition.</p>
 
+<p>My sister <a href="http://prital.netlify.com/" target="_blank">Priyanga Dilini Talagala</a> is also a PhD student at Monash University, Australia.</p>
+
 <p>This site is built with R markdown and Hugo and deployed with Netlify.</p>
 
 
