--- a/public/index.html
+++ b/public/index.html
@@ -459,7 +459,9 @@ url('/img/headers/bubbles-wide.jpg');
   </div>
   <div class="col-xs-12 col-md-8">
     <p><ul>
-<li><a href="https://github.com/thiyangt/seer" target="_blank">seer</a>: R package for feature-based time series forecasting.</li>
+<li><p><a href="https://github.com/thiyangt/seer" target="_blank">seer</a>: R package for feature-based time series forecasting.</p></li>
+
+<li><p><a href="https://github.com/robjhyndman/tsfeatures" target="_blank">tsfeatures</a>: R package tsfeatures provides methods for extracting various features from time series data.(Package contributed.)</p></li>
 </ul>
 </p>
 
