--- a/public/index.html
+++ b/public/index.html
@@ -374,7 +374,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 <h1 id="about-me">About me</h1>
 
-<p>I am a PhD student in Statistics at Monash University, Australia. My recent research has cetered around the problem of forecasting large collections of time series. My dissertation work focuses specifically on developing computationally efficient forecasting methods for large-scale real-time applications.</p>
+<p>I am a PhD student in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a>. My recent research has cetered around the problem of forecasting large collections of time series. My dissertation work focuses specifically on developing computationally efficient forecasting methods for large-scale real-time applications.</p>
 
 <p>I am also interested in statistical programming with R. I have written several  packages in R.</p>
 
