--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -54,7 +54,7 @@
   
   <link rel="stylesheet" href="/styles.css">
   
-  <link rel="stylesheet" href="/css/academiccustom.css">
+  <link rel="stylesheet" href="/css/custom.css">
   
 
   
