Change the picture

--- a/public/index.html
+++ b/public/index.html
@@ -275,10 +275,12 @@
 
 <section id="hero" class="hero-overlay" style="
 
+background-color: #666;
+
 
 background-image:
 
-url('/img/headers/sunflower.jpg');
+url('/img/headers/bubbles-wide.jpg');
 
 ;">
 
