--- a/public/index.html
+++ b/public/index.html
@@ -287,7 +287,7 @@ url('/img/headers/bubbles-wide.jpg');
   <div class="container">
 
     <h1 class="hero-title" itemprop="headline">
-      
+      The words don&rsquo;t fit the pictures.
     </h1>
 
     
