--- a/public/index.html
+++ b/public/index.html
@@ -280,14 +280,14 @@ background-color: #666;
 
 background-image:
 
-url('/img/headers/header.jpg');
+url('/img/headers/bubbles-wide.jpg');
 
 ;">
 
   <div class="container">
 
     <h1 class="hero-title" itemprop="headline">
-      The words don&rsquo;t fit the pictures.
+      
     </h1>
 
     
