--- a/public/index.html
+++ b/public/index.html
@@ -402,15 +402,9 @@ url('/img/headers/bubbles-wide.jpg');
 
 <h1 id="about-me">About me</h1>
 
-<p>I am a PhD student in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a>. My recent research has cetered around the problem of forecasting large collections of time series. My dissertation work focuses specifically on developing computationally efficient forecasting methods for large-scale real-time applications.</p>
+<p>I am a PhD candidate in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a> working with <a href="https://robjhyndman.com/hyndsight/" target="_blank">Professor Rob Hyndman</a> and <a href="https://research.monash.edu/en/persons/george-athanasopoulos" target="_blank">Associate Professor George Athanasopoulos</a>. My PhD research focuses on the problem of forecasting large collections of time series. I am also interested in R programming language and general data science problems.</p>
 
-<p>I am also interested in statistical programming with R. I have written several  packages in R.</p>
-
-<p>Prior to joining Monash, I received a B.Sc. special degree in Statistics from the <a href="https://www.sjp.ac.lk/" target="_blank">University of Sri Jayewardenepura, Sri Lanka</a>. I was ranked first in my class and was awarded with <a href="http://science.sjp.ac.lk/scholarships/" target="_blank">Professor R A Dayananda Gold Medal for Statistics</a>. My MSc. thesis titled, &ldquo;Mathematical modeling of dengue dynamics and climate variability in Sri Lanka&rdquo; won Bronze Medal at the Best Postgraduate Research Project Award Competition organized by the Institute of Applied Statistics, Sri Lanka and a special recognition award from <a href="https://www.mrt.ac.lk/web/" target="_blank">University of Moratuwa, Sri Lanka</a> for winning the Bronze Medal at the Best Postgraduate Research Project Award Competition.</p>
-
-<p>My sister <a href="http://prital.netlify.com/" target="_blank">Priyanga Dilini Talagala</a> is also a PhD student at Monash University, Australia.</p>
-
-<p>This site is built with R markdown and Hugo and deployed with Netlify.</p>
+<p>My sister <a href="http://prital.netlify.com/" target="_blank">Priyanga Dilini Talagala</a> is also a PhD student at Monash University, Australia. This site is built with R markdown and Hugo and deployed with Netlify.</p>
 
 
     <div class="row">
