add about me on the picture

--- a/public/index.html
+++ b/public/index.html
@@ -292,6 +292,9 @@ url('/img/headers/bubbles-wide.jpg');
 
     
     <p class="hero-lead"><br>
+<small><a href="#about" class="fa fa-octocat">About me</a></small>
+<br><br>
+<br>
     <small><a id="academic-release" href="https://sourcethemes.com/academic/updates"> </a></small>
     <br><br>
     <iframe style="display: inline-block;" src="" scrolling="0" width="200px" height="550px" frameborder="0"></iframe>
