--- a/public/index.html
+++ b/public/index.html
@@ -980,17 +980,19 @@ url('/img/headers/bubbles-wide.jpg');
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p><ul>
-<li><p>2016: Research awards, USJ</p></li>
+    <p><p><strong>2018:</strong> Travel award, IIF</p>
 
-<li><p>2016: Monash University Tution Fee Scholarship</p></li>
+<p><strong>2017:</strong> Travel award, SSA, Australia</p>
 
-<li><p>2016: Monash Graduate Scholarship</p></li>
+<p><strong>2016:</strong> Research awards, USJ</p>
 
-<li><p>2015: Bronze medal at the Best Post-Graduate Competition Held by IASSL</p></li>
+<p><strong>2016:</strong> Monash University Tution Fee Scholarship</p>
 
-<li><p>2012: Professor R. A. Dayanda Gold Medal for Statistics</p></li>
-</ul>
+<p><strong>2016:</strong> Monash Graduate Scholarship</p>
+
+<p><strong>2015:</strong> Bronze medal at the Best Post-Graduate Competition Held by IASSL</p>
+
+<p><strong>2012:</strong> Professor R. A. Dayanda Gold Medal for Statistics</p>
 </p>
 
     
