Change the title to projects

--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
         <li class="nav-item">
           <a href="/#projects" data-target="#projects">
             
-            <span>Awards</span>
+            <span>Projects</span>
             
           </a>
         </li>
