add the img for the first project

--- a/public/404.html
+++ b/public/404.html
@@ -305,6 +305,13 @@
 
   
   
+  <h2>Projects</h2>
+  
+  <ul>
+    <li><a href="/project/largescaleforecasting/">Large-scale time series forecasting</a></li>
+  </ul>
+  
+  
 
 </div>
 <footer class="site-footer">
