link the image to the ls-project

--- a/public/index.html
+++ b/public/index.html
@@ -1020,7 +1020,7 @@ url('/img/headers/bubbles-wide.jpg');
           
           <a href="/project/largescaleforecasting/" title="" class="card-image hover-overlay"
              >
-            <img src="/img/ts.jpg" alt="" class="img-responsive">
+            <img src="/img/headers/ts.jpg" alt="" class="img-responsive">
           </a>
           
           <div class="card-text">
