--- a/public/index.html
+++ b/public/index.html
@@ -1018,6 +1018,11 @@ url('/img/headers/bubbles-wide.jpg');
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-6 project-item isotope-item Time-Series">
         <div class="card">
           
+          <a href="/project/largescaleforecasting/" title="" class="card-image hover-overlay"
+             >
+            <img src="/img/headers/ts.jpg" alt="" class="img-responsive">
+          </a>
+          
           <div class="card-text">
             <h4><a href="/project/largescaleforecasting/" >Large-scale time series forecasting</a></h4>
             <div class="card-desription">
