add test file for projects

--- a/public/404.html
+++ b/public/404.html
@@ -311,6 +311,10 @@
     <li><a href="/project/largescaleforecasting/">Large-scale time series forecasting</a></li>
   </ul>
   
+  <ul>
+    <li><a href="/project/test/">oddstream - R package</a></li>
+  </ul>
+  
   
 
 </div>
