--- a/public/index.html
+++ b/public/index.html
@@ -1058,11 +1058,9 @@ url('/img/headers/bubbles-wide.jpg');
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <ul>
-<li><p>Teaching Associate, Monash University, Australia</p></li>
+    <p><i class="fa fa-asterisk faa-flash"></i> Teaching Associate, Monash University, Australia</p>
 
-<li><p>Lecturer (Probationary), <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, Univesity of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p></li>
-</ul>
+<p><i class="fa fa-asterisk faa-flash"></i> Lecturer (Probationary), <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, Univesity of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p>
 
   </div>
   
