--- a/public/index.html
+++ b/public/index.html
@@ -1058,9 +1058,9 @@ url('/img/headers/bubbles-wide.jpg');
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p><i class="fa fa-asterisk faa-pulse animated-hover"></i> Teaching Associate, Monash University, Australia</p>
+    <p><i class="fa fa-asterisk fa-spin"></i> Teaching Associate, Monash University, Australia</p>
 
-<p><i class="fa fa-asterisk"></i> Lecturer (Probationary), <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, Univesity of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p>
+<p><i class="fa fa-asterisk fa-spin"></i> Lecturer (Probationary), <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, Univesity of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p>
 
   </div>
   
