--- a/public/index.html
+++ b/public/index.html
@@ -405,9 +405,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 <h1 id="about-me">About me</h1>
 
-<p>I am a PhD candidate in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a> working with <a href="https://robjhyndman.com/hyndsight/" target="_blank">Professor Rob Hyndman</a> and <a href="https://research.monash.edu/en/persons/george-athanasopoulos" target="_blank">Associate Professor George Athanasopoulos</a>. My PhD research focuses on the problem of forecasting large collections of time series. I am also interested in R programming language and general data science problems.</p>
-
-<p>My sister <a href="http://prital.netlify.com/" target="_blank">Priyanga Dilini Talagala</a> is also a PhD candidate at Monash University, Australia. This site is built with R markdown and Hugo and deployed with Netlify.</p>
+<p>I am a PhD candidate in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a>. My PhD research focuses on the problem of forecasting large collections of time series. I enjoy solving general data science problems from three different angles: theoretical, computational, applied. In this website you will find some of my work and interests on statistics and data analysis. I am also interested in R programming language.</p>
 
 
     <div class="row">
