--- a/public/index.html
+++ b/public/index.html
@@ -405,7 +405,7 @@ url('/img/headers/bubbles-wide.jpg');
 
 <h1 id="about-me">About me</h1>
 
-<p>I am a PhD candidate in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a>. My PhD research focuses on the problem of forecasting large collections of time series. I enjoy solving general data science problems from three different angles: theoretical, computational, applied. In this website you will find some of my work and interests on statistics and data analysis. I am also interested in R programming language.</p>
+<p>I am a PhD candidate in Statistics at <a href="https://www.monash.edu/" target="_blank">Monash University, Australia</a>. My PhD research focuses on the problem of forecasting large collections of time series. Further, I enjoy solving general data science problems from three different angles: theoretical, computational, applied. In this website you will find some of my work and interests on statistics and data analysis. I am also interested in R programming language.</p>
 
 
     <div class="row">
