add boxplot post

--- a/public/404.html
+++ b/public/404.html
@@ -265,7 +265,11 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/parallelcomputing/">Parallel Computing in R</a></li>
+    <li><a href="/post/boxplot/">Customizing boxplot with ggplot</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/parallelcomputing/">Customizing boxplot with ggplot</a></li>
   </ul>
   
   <ul>
