parallel computing file

--- a/public/404.html
+++ b/public/404.html
@@ -269,7 +269,7 @@
   </ul>
   
   <ul>
-    <li><a href="/post/parallelcomputing/">Customizing boxplot with ggplot</a></li>
+    <li><a href="/post/parallelcomputing/">parallel computing with R</a></li>
   </ul>
   
   <ul>
