--- a/public/index.html
+++ b/public/index.html
@@ -911,7 +911,7 @@ Gender &lt;- rep(c(&quot;Male&quot;, &quot;Female&quot;), times = 3, each = 4) Q
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="/post/parallelcomputing/" itemprop="url">Customizing boxplot with ggplot</a>
+    <a href="/post/parallelcomputing/" itemprop="url">parallel computing with R</a>
   </h3>
   
 
