--- a/public/404.html
+++ b/public/404.html
@@ -265,15 +265,15 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/boxplot/">Customizing boxplot with ggplot</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="/post/parallelcomputing/">parallel computing with R</a></li>
   </ul>
   
   <ul>
     <li><a href="/post/datatypes/">Data Types in R</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/using-r-to-analyse-the-german-federal-election/">Customizing boxplot with ggplot</a></li>
   </ul>
   
   
