--- a/public/index.html
+++ b/public/index.html
@@ -976,7 +976,7 @@ url('/img/headers/bubbles-wide.jpg');
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="/post/boxplot/" itemprop="url">Customizing boxplot with ggplot</a>
+    <a href="/post/blog/" itemprop="url">Customizing boxplot with ggplot</a>
   </h3>
   
 
@@ -1030,7 +1030,7 @@ Gender &lt;- rep(c(&quot;Male&quot;, &quot;Female&quot;), times = 3, each = 4)Q
     
   </div>
   <p class="read-more" itemprop="mainEntityOfPage">
-    <a href="/post/boxplot/" class="btn btn-primary btn-outline">
+    <a href="/post/blog/" class="btn btn-primary btn-outline">
       CONTINUE READING
     </a>
   </p>
