--- a/public/404.html
+++ b/public/404.html
@@ -273,7 +273,7 @@
   </ul>
   
   <ul>
-    <li><a href="/post/blog/">Customizing boxplot with ggplot</a></li>
+    <li><a href="/post/blog/">Customizing boxplots with ggplot2</a></li>
   </ul>
   
   
