--- a/public/index.html
+++ b/public/index.html
@@ -976,7 +976,7 @@ url('/img/headers/bubbles-wide.jpg');
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="/post/blog/" itemprop="url">Customizing boxplot with ggplot</a>
+    <a href="/post/blog/" itemprop="url">Customizing boxplots with ggplot2</a>
   </h3>
   
 
