--- a/public/404.html
+++ b/public/404.html
@@ -265,15 +265,19 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/blog/">What&#39;s in a package?</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/blog/">Customizing boxplots with ggplot2</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/parallelcomputing/">parallel computing with R</a></li>
   </ul>
   
   <ul>
     <li><a href="/post/datatypes/">Data Types in R</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/post/blog/">Customizing boxplots with ggplot2</a></li>
   </ul>
   
   
