--- a/public/404.html
+++ b/public/404.html
@@ -265,7 +265,7 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/blog/">What&#39;s in a package?</a></li>
+    <li><a href="/post/packageinfo/">What&#39;s in a package?</a></li>
   </ul>
   
   <ul>
