--- a/public/index.html
+++ b/public/index.html
@@ -846,7 +846,7 @@ url('/img/headers/bubbles-wide.jpg');
   
   
   <h3 class="article-title" itemprop="headline">
-    <a href="/post/blog/" itemprop="url">What&#39;s in a package?</a>
+    <a href="/post/packageinfo/" itemprop="url">What&#39;s in a package?</a>
   </h3>
   
 
@@ -901,7 +901,7 @@ library(dplyr)ls(&quot;package:dplyr&quot;)## [1] &quot;%&gt;%&quot; &quot;add
     
   </div>
   <p class="read-more" itemprop="mainEntityOfPage">
-    <a href="/post/blog/" class="btn btn-primary btn-outline">
+    <a href="/post/packageinfo/" class="btn btn-primary btn-outline">
       CONTINUE READING
     </a>
   </p>
