--- a/public/index.html
+++ b/public/index.html
@@ -1237,7 +1237,7 @@ Gender &lt;- rep(c(&quot;Male&quot;, &quot;Female&quot;), times = 3, each = 4)Q
   <div class="col-xs-12 col-md-8">
     <p><i class="fa fa-asterisk fa-spin" style="color:red"></i> Teaching Associate, Monash University, Australia</p>
 
-<p><i class="fa fa-asterisk fa-spin" style="color:red"></i> Lecturer (Probationary), <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, Univesity of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p>
+<p><i class="fa fa-asterisk fa-spin" style="color:red"></i> Lecturer (Probationary), <a href="http://science.sjp.ac.lk/" target="_blank">Department of Statistics, Faculty of Applied Sciences, University of Sri Jayewardenepura, Sri Lanka</a> (currently on study leave)</p>
 
   </div>
   
