--- a/public/404.html
+++ b/public/404.html
@@ -278,6 +278,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/greekletters/">Some useful Greek letters you might use on Rmarkdown</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/packageinfo/">What&#39;s in a package?</a></li>
   </ul>
   
