add explainer to the page

--- a/public/index.html
+++ b/public/index.html
@@ -532,7 +532,9 @@ url('/img/headers/bubbles-wide.jpg');
   <div class="col-xs-12 col-md-8">
     <p><p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/thiyangt/seer" target="_blank">seer</a>: R package for feature-based time series forecasting.</p>
 
-<p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/robjhyndman/tsfeatures" target="_blank">tsfeatures</a>: R package tsfeatures provides methods for extracting various features from time series data.(Package contributed.)</p>
+<p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/robjhyndman/tsfeatures" target="_blank">tsfeatures</a>: R package tsfeatures provides methods for extracting various features from time series data.</p>
+
+<p><i class="fa fa-cog fa-spin" style="color:Maroon"></i> <a href="https://github.com/thiyangt/explainer" target="_blank">explainer</a>: Take a peek inside a random forest.</p>
 </p>
 
     
